[feat] Implement API public Login Get all data
