# docs/swagger.yaml
@@ -83,6 +83,31 @@ definitions:
       error:
         type: string
     type: object
+  dto.LoginGetAllDataResponse:
+    properties:
+      access_token:
+        type: string
+      all_cards:
+        items:
+          $ref: '#/definitions/entity.Card'
+        type: array
+      decks_review:
+        items:
+          $ref: '#/definitions/entity.DeckWithReviewCards'
+        type: array
+      public_decks:
+        items:
+          $ref: '#/definitions/entity.DeckWithCards'
+        type: array
+      refresh_token:
+        type: string
+      user:
+        $ref: '#/definitions/entity.User'
+      user_decks:
+        items:
+          $ref: '#/definitions/entity.DeckWithCards'
+        type: array
+    type: object
   dto.LoginResponse:
     properties:
       access_token:
@@ -719,6 +744,46 @@ paths:
       summary: Login
       tags:
       - user
+  /api/login-get-all:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Log In And Get All Data
+      parameters:
+      - in: formData
+        name: email
+        required: true
+        type: string
+      - in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.LoginGetAllDataResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Log In And Get All Data
+      tags:
+      - mobile
   /api/refresh:
     post:
       consumes:
