# internal/delivery/http/dto/user.go
@@ -14,6 +14,16 @@ type LoginResponse struct {
 	RefreshToken string `json:"refresh_token"`
 }
 
+type LoginGetAllDataResponse struct {
+	AccessToken          string                       `json:"access_token"`
+	RefreshToken         string                       `json:"refresh_token"`
+	User                 entity.User                  `json:"user"`
+	UserDeckAndCards     []entity.DeckWithCards       `json:"user_decks"`
+	PublicDeckAndCards   []entity.DeckWithCards       `json:"public_decks"`
+	DecksWithReviewCards []entity.DeckWithReviewCards `json:"decks_review"`
+	AllCards             []entity.Card                `json:"all_cards"`
+}
+
 // Sign Up
 
 type SignupRequest struct {
